--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
   <link rel="stylesheet" href="css/custom.css">
   </head>
   <body>
+  	<script type="text/javascript" src="js/lib/BigInteger.js" ></script>
+    <script type="text/javascript" src="js/lib/sjcl.js" ></script>
+    <script type="text/javascript" src="js/lib/sha256.js" ></script>
+    <script type="text/javascript" src="js/lib/elliptic.min.js" ></script>
+    <script type="text/javascript" src="js/lib/format.js" ></script>
+	<script type="text/javascript" src="js/lib/rpc.js" ></script>
+    <script type="text/javascript" src="js/lib/codecBytes.js" ></script>
+    <script type="text/javascript" src="js/lib/crypto.js" ></script>
+    <script type="text/javascript" src="js/lib/merkle_proofs.js" ></script>
+    <script type="text/javascript" src="js/lib/encryption_library.js" ></script>
+    <script type="text/javascript" src="js/lib/server.js" ></script>
+    <script type="text/javascript" src="js/lib/headers.js" ></script>
+    <script type="text/javascript" src="js/lib/keys.js" ></script>
+	<script type="text/javascript" src="js/lib/signing.js" ></script>
+	<script type="text/javascript" src="js/lib/spend_tx.js" ></script>
+	<script type="text/javascript" src="js/lib/sub_accounts.js" ></script>
+	<script type="text/javascript" src="js/lib/scalar_derivative.js" ></script>
+	<script type="text/javascript" src="js/lib/swaps.js" ></script>
+	<script type="text/javascript" src="js/lib/multi_tx.js" ></script>
+	
 	<script type="text/javascript" src="js/jquery.js" ></script>
 	<script type="text/javascript" src="js/bootstrap.js" ></script>
 	
