--- a/index.html
+++ b/index.html
@@ -100,7 +100,28 @@
 
 </div>
 <div id="browse" class="col-sm-8 route" style="display:none">
-
+<table class="table table-hover">
+<thead id="offersHead" style="display:none">
+    <tr >
+			<th scope="col" class="accountCol" style="display:none">Account</th>
+			<th scope="col" class="startCol" style="display:none">Starts</th>
+			<th scope="col" class="endCol" style="display:none">Expires</th>
+			<th scope="col" class="cid1Col" style="display:none">Cid 1</th>
+			<th scope="col" class="type1Col" style="display:none">Type 1</th>
+			<th scope="col" class="text1Col" style="display:none">Sub 1</th>
+			<th scope="col" class="amount1Col" style="display:none">Amount 1</th>
+			<th scope="col" class="cid2Col" style="display:none">Cid 2</th>
+			<th scope="col" class="type2Col" style="display:none">Type 2</th>
+			<th scope="col" class="text2Col" style="display:none">Sub 2</th>
+			<th scope="col" class="amount2Col" style="display:none">Amount 2</th>
+			<th scope="col" class="saltCol" style="display:none">Salt</th>
+			<th scope="col" class="nonceCol" style="display:none">Nonce</th>
+			<th scope="col" class="partsCol" style="display:none">Parts</th>
+    </tr>
+  </thead>
+	<tbody id="offers">
+	</tbody>
+</table>
 </div>
 <div id="send" class="col-sm-8 route" style="display:none">
 <table class="table table-hover">
