--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
 			<th scope="col" class="type1Col" style="display:none">Type 1</th>
 			<th scope="col" class="text1Col" style="display:none">Sub 1</th>
 			<th scope="col" class="amount1Col" style="display:none">Amount 1</th>
+			<th scope="col" class="riskCol" style="display:none">Risk</th>
 			<th scope="col" class="cid2Col" style="display:none">Cid 2</th>
 			<th scope="col" class="type2Col" style="display:none">Type 2</th>
 			<th scope="col" class="text2Col" style="display:none">Sub 2</th>
 			<th scope="col" class="amount2Col" style="display:none">Amount 2</th>
+			<th scope="col" class="toWinCol" style="display:none">To win</th>
 			<th scope="col" class="saltCol" style="display:none">Salt</th>
 			<th scope="col" class="nonceCol" style="display:none">Nonce</th>
 			<th scope="col" class="partsCol" style="display:none">Parts</th>
