reorg some stuff

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	
 	<script type="text/javascript" src="js/jquery.js" ></script>
 	<script type="text/javascript" src="js/bootstrap.js" ></script>
+	<script type="text/javascript" src="js/init.js" ></script>
 	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
