--- a/index.html
+++ b/index.html
@@ -107,16 +107,17 @@
 			<th scope="col" class="accountCol" style="display:none">Account</th>
 			<th scope="col" class="startCol" style="display:none">Starts</th>
 			<th scope="col" class="endCol" style="display:none">Expires</th>
-			<th scope="col" class="cid1Col" style="display:none">Cid 1</th>
-			<th scope="col" class="type1Col" style="display:none">Type 1</th>
-			<th scope="col" class="text1Col" style="display:none">Sub 1</th>
-			<th scope="col" class="amount1Col" style="display:none">Amount 1</th>
+			<th scope="col" class="cid1Col" style="display:none">Cid1</th>
+			<th scope="col" class="type1Col" style="display:none">Type1</th>
+			<th scope="col" class="text1Col" style="display:none">Sub1</th>
+			<th scope="col" class="amount1Col" style="display:none">Amount1</th>
 			<th scope="col" class="riskCol" style="display:none">Risk</th>
 			<th scope="col" class="cid2Col" style="display:none">Cid 2</th>
-			<th scope="col" class="type2Col" style="display:none">Type 2</th>
-			<th scope="col" class="text2Col" style="display:none">Sub 2</th>
-			<th scope="col" class="amount2Col" style="display:none">Amount 2</th>
+			<th scope="col" class="type2Col" style="display:none">Type2</th>
+			<th scope="col" class="text2Col" style="display:none">Sub2</th>
+			<th scope="col" class="amount2Col" style="display:none">Amount2</th>
 			<th scope="col" class="toWinCol" style="display:none">To win</th>
+			<th scope="col" class="ifCol" style="display:none">If</th>
 			<th scope="col" class="saltCol" style="display:none">Salt</th>
 			<th scope="col" class="nonceCol" style="display:none">Nonce</th>
 			<th scope="col" class="partsCol" style="display:none">Parts</th>
@@ -158,7 +159,7 @@
 	<input type="text" class="form-control createInput" id="statement" placeholder="Statement">
 	</div>
 	<div class="input-group mb-3">
-	<select class="form-select createInput" id="statementSelect">
+	<select class="form-select" id="statementSelect">
         <option>True</option>
         <option>False</option>
     </select>
@@ -249,4 +250,5 @@
 	
 <script type="text/javascript" src="js/main.js" ></script>
 </body>
+
 </html>
